--- a/src/config/_tokens.scss
+++ b/src/config/_tokens.scss
@@ -1,6 +1,6 @@
 $tokens:(
-  version: 1.0.0-9,
-  cdn: "https://cdn.jsdelivr.net/gh/NYCOpportunity/growingupnyc-patterns@1.0.0-9/dist/",
+  version: 1.0.0-10,
+  cdn: "https://cdn.jsdelivr.net/gh/NYCOpportunity/growingupnyc-patterns@1.0.0-10/dist/",
   output: "./src/config/_tokens.scss",
   fonts: (
     system: (-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif),
